--- a/teste.htm
+++ b/teste.htm
@@ -10,5 +10,7 @@
 </head>
 <body>
     <h1>A PROVA DE GCM</h1>
+    <input placeholder="Insira o que quiser aqui"/>
+    <button>Clique para enviar</button>
 </body>
 </html>
