Revert "teste merge"
This reverts commit 27706ebba690300754bb7bb2dc700040f149244a.

--- a/teste.html
+++ b/teste.html
@@ -11,6 +11,6 @@
 <body>
     <h1>A PROVA DE GCM</h1>
     <input placeholder="Insira o que quiser aqui"/>
-    <button>Clique para fazer o merge</button>
+    <button>Clique para enviar</button>
 </body>
 </html>
