add "mostrando commit"

--- a/teste.html
+++ b/teste.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>A PROVA DE GCM</h1>
+    <h1>A PROVA DE GCM - MOSTRANDO COMMIT</h1>
     <input placeholder="Insira o que quiser aqui"/>
     <button>Clique para enviar</button>
 </body>
