--- a/teste.html
+++ b/teste.html
@@ -11,6 +11,6 @@
 <body>
     <h1>A PROVA DE GCM - MOSTRANDO COMMIT</h1>
     <input placeholder="Insira o que quiser aqui"/>
-    <button>Clique para enviar</button>
+    <button>Clique para enviar as alterações do conflito dois</button>
 </body>
 </html>
